--- a/src/css/navfoot.css
+++ b/src/css/navfoot.css
@@ -8,10 +8,14 @@
     background-color: #fff;
     padding: 10px 0;
     /* margin: auto 360px; */
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
+    border-bottom: 1px solid #f6f6f6;
+    -webkit-box-shadow: 0px 0px 8px -1px rgba(61,61,61,0.79);
+    -moz-box-shadow: 0px 0px 8px -1px rgba(61,61,61,0.79);
+    box-shadow: 0px 0px 5px -1px rgba(61,61,61,0.79);
 }
 
 .nav-container {
