Retoques en página de pagos
- Igualmente redirecciones para navegación entre páginas

--- a/src/css/navfoot.css
+++ b/src/css/navfoot.css
@@ -53,7 +53,7 @@
 
 /* FOOTER */
 .footer {
-    background-color: var(--gray);
+    background-color: #31363F;
     padding: 10px 0;
     top: 0;
     left: 0;
