--- a/src/css/PassengersForm.css
+++ b/src/css/PassengersForm.css
@@ -46,12 +46,13 @@
 }
 .custom_input {
 	display: flex;
-	align-items: center;
+    flex-direction: column;
+	/* align-items: center; */
 	position: relative;
 	width: 100%;
 }
 
-.input {
+.inputPassengers {
 	font-size: 18px;
     margin-top: 1rem;
 	padding: 20px 15px;
@@ -97,6 +98,7 @@
     border: none;
     border-radius: 10px;
     color: #fff;
+    margin-bottom: 5rem;
 }
 .hrStyleOne {
     border: 0;
@@ -116,3 +118,9 @@
 /* .marginL {
     margin-left: 2rem;
 } */
+.invalid {
+    border-color: red;
+}
+.error_span {
+    color: red;
+}
