--- a/src/css/navfoot.css
+++ b/src/css/navfoot.css
@@ -18,6 +18,7 @@
     -webkit-box-shadow: 0px 0px 8px -1px rgba(61,61,61,0.79);
     -moz-box-shadow: 0px 0px 8px -1px rgba(61,61,61,0.79);
     box-shadow: 0px 0px 5px -1px rgba(61,61,61,0.79);
+    z-index: 100;
 }
 
 .nav-container {
